1-networking/108-dns/cf/stack.yaml
---
  AWSTemplateFormatVersion: "2010-09-09"
  Parameters:
    dojo:
      Type: String
      Default: 'aws-workout'
    LatestAmiId:
      Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
      Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

  Resources:

# Create two VPCs (one with DNS enabled, the other without)
    firstVpc108:
      Type: "AWS::EC2::VPC"
      Properties:
        CidrBlock: "10.100.0.0/16"
        EnableDnsHostnames: true
        EnableDnsSupport: true
        Tags:
          -
            Key: "Purpose"
            Value: !Ref dojo
          -
            Key: "Name"
            Value: 'net-108-vpc-1'
          -
            Key: "Description"
            Value: !Sub 'A First VPC with DNS enabled in ${AWS::Region} Region'

    secondVpc108:
      Type: "AWS::EC2::VPC"
      Properties:
        CidrBlock: "10.200.0.0/16"
        EnableDnsHostnames: false
        EnableDnsSupport: false
        Tags:
          -
            Key: "Purpose"
            Value: !Ref dojo
          -
            Key: "Name"
            Value: 'net-108-vpc-2'
          -
            Key: "Description"
            Value: !Sub 'A Second VPC with DNS disabled in ${AWS::Region} Region'

# Create one subnet in each VPC
    Subnet1:
      Type: "AWS::EC2::Subnet"
      Properties:
        VpcId: !Ref firstVpc108
        AvailabilityZone:
          Fn::Sub: "${AWS::Region}a"
        CidrBlock: "10.100.0.0/24"
        Tags:
          -
            Key: "Purpose"
            Value: !Ref dojo
          -
            Key: "Name"
            Value: 'net-108-subnet-1'
    Subnet2:
      Type: "AWS::EC2::Subnet"
      Properties:
        VpcId: !Ref secondVpc108
        AvailabilityZone:
          Fn::Sub: "${AWS::Region}a"
        CidrBlock: "10.200.0.0/24"
        Tags:
          -
            Key: "Purpose"
            Value: !Ref dojo
          -
            Key: "Name"
            Value: 'net-108-subnet-2'

# Give access from internet for SSH in Subnet 1
    IGW108:
      Type: AWS::EC2::InternetGateway
      Properties:
        Tags:
          - Key: "Name"
            Value: "net-108-igw"
          - Key: "Purpose"
            Value: !Ref dojo

    IGW108Attachment:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
        InternetGatewayId: !Ref IGW108
        VpcId: !Ref firstVpc108

    RT108:
      Type: AWS::EC2::RouteTable
      DependsOn: IGW108Attachment
      Properties:
        VpcId: !Ref firstVpc108
        Tags:
          - Key: "Name"
            Value: "net-108-rt"
          - Key: "Purpose"
            Value: !Ref dojo

    RouteToInternet:
      Type: AWS::EC2::Route
      DependsOn: IGW108
      Properties:
         RouteTableId:
           Ref: RT108
         DestinationCidrBlock: 0.0.0.0/0
         GatewayId: !Ref IGW108
    RTSubnetAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref RT108
        SubnetId: !Ref Subnet1

    SG108:
      Type: AWS::EC2::SecurityGroup
      Properties:
        VpcId: !Ref firstVpc108
        GroupDescription: "Security group for net-108 dojo"
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        Tags:
          - Key: "Name"
            Value: "net-108-sg"
          - Key: "Purpose"
            Value: !Ref dojo

  # Create one EC2 in each subnet
    EC2Number1:
      Type: AWS::EC2::Instance
      Properties:
        InstanceType: 't2.micro'
        KeyName: 'aws-workout-key'
        ImageId: !Ref LatestAmiId
        NetworkInterfaces:
          - AssociatePublicIpAddress: "true"
            DeviceIndex: "0"
            GroupSet:
              - !Ref SG108
            SubnetId: !Ref Subnet1
        Tags:
          - Key: "Name"
            Value: "net-108-ec2-1"
          - Key: "Purpose"
            Value: !Ref dojo

    EC2Number2:
      Type: AWS::EC2::Instance
      Properties:
        InstanceType: 't2.micro'
        KeyName: 'aws-workout-key'
        ImageId: !Ref LatestAmiId
        NetworkInterfaces:
          - AssociatePublicIpAddress: "false"
            DeviceIndex: "0"
            SubnetId: !Ref Subnet2
        Tags:
          - Key: "Name"
            Value: "net-108-ec2-2"
          - Key: "Purpose"
            Value: !Ref dojo
